--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <input  id="senha" type="password" placeholder="Digite sua senha" /> 
         <br />
         <input type="submit" value="Cadastrar"  />
-    </form>
+    </form> <!--não esquecer de usar o form para formulários-->
 </body>
 </html>
